[gd_scene load_steps=18 format=2]

[ext_resource path="res://images/spritesheets/grandma-head-small.png" type="Texture" id=1]
[ext_resource path="res://images/spritesheets/grandma-body-small.png" type="Texture" id=2]
[ext_resource path="res://images/menu/macron-cartoon.jpg" type="Texture" id=3]
[ext_resource path="res://images/menu/tv-wide.png" type="Texture" id=4]
[ext_resource path="res://scripts/intro.gd" type="Script" id=5]
[ext_resource path="res://scripts/grandma.gd" type="Script" id=6]
[ext_resource path="res://fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/interface/dialogbox.png" type="Texture" id=9]
[ext_resource path="res://images/menu/apartment-old.jpg" type="Texture" id=10]
[ext_resource path="res://prefab/click_button.tscn" type="PackedScene" id=13]
[ext_resource path="res://sounds/menu/pop.wav" type="AudioStream" id=21]
[ext_resource path="res://prefab/audio-icon.tscn" type="PackedScene" id=22]
[ext_resource path="res://prefab/fullscreen_icon.tscn" type="PackedScene" id=23]

[sub_resource type="Animation" id=1]
resource_name = "head-movement"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, -10.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 90
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 8 )

[node name="menu" type="Node2D"]
position = Vector2( 0, 0.947266 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 448.0 ]
}

[node name="apartment" type="Sprite" parent="."]
position = Vector2( 476.83, 302.027 )
scale = Vector2( 0.97, 0.97 )
texture = ExtResource( 10 )

[node name="grandma" type="Node2D" parent="."]
position = Vector2( -18.8234, 69.5019 )
script = ExtResource( 6 )

[node name="grandma-body-small" type="Sprite" parent="grandma"]
position = Vector2( 192.411, 370.468 )
texture = ExtResource( 2 )

[node name="grandma-head-small" type="Sprite" parent="grandma"]
position = Vector2( 203.457, 254.665 )
rotation = -0.174533
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="grandma/grandma-head-small"]
anims/head-movement = SubResource( 1 )

[node name="tv" type="Node2D" parent="."]
position = Vector2( -305.086, 72.7701 )

[node name="macron-cartoon" type="Sprite" parent="tv"]
position = Vector2( 727.939, 336.628 )
scale = Vector2( 0.290387, 0.292149 )
texture = ExtResource( 3 )

[node name="tv-wide" type="Sprite" parent="tv"]
position = Vector2( 763.347, 296.825 )
rotation = -0.00773652
scale = Vector2( 0.306909, 0.311166 )
texture = ExtResource( 4 )

[node name="dialog" type="Node2D" parent="."]

[node name="dialogbox" type="Sprite" parent="dialog"]
position = Vector2( 411.148, 178.224 )
texture = ExtResource( 9 )

[node name="grandma_dialog" type="RichTextLabel" parent="dialog"]
anchor_top = 0.00132736
anchor_bottom = 0.00132736
margin_left = 158.0
margin_top = 39.0
margin_right = 689.0
margin_bottom = 220.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="dialog"]

[node name="scroll_faster" type="Button" parent="."]
anchor_left = -0.00269775
anchor_top = 0.00269775
anchor_right = -0.00269775
anchor_bottom = 0.00269775
margin_left = 5.7135
margin_top = -40.1971
margin_right = 1040.71
margin_bottom = 691.803
custom_styles/focus = SubResource( 3 )
action_mode = 0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="skip_button" type="Node2D" parent="."]
position = Vector2( 749.954, 88.9999 )

[node name="skip-text" type="RichTextLabel" parent="skip_button"]
margin_left = -165.149
margin_top = 391.045
margin_right = 308.851
margin_bottom = 492.045
custom_fonts/normal_font = SubResource( 4 )
text = "SKIP>>>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip_dialog" type="Button" parent="skip_button"]
anchor_left = -0.00269775
anchor_top = 0.00269775
anchor_right = -0.00269775
anchor_bottom = 0.00269775
margin_left = -136.954
margin_top = 345.0
margin_right = 238.046
margin_bottom = 494.0
action_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Node2D" parent="."]
position = Vector2( 637.954, 88.9999 )

[node name="back_text" type="RichTextLabel" parent="back_button"]
margin_left = -478.568
margin_top = 426.092
margin_right = -4.56824
margin_bottom = 527.092
rect_scale = Vector2( 0.590261, 0.590261 )
custom_fonts/normal_font = SubResource( 4 )
text = "<<<BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_dialog" type="Button" parent="back_button"]
anchor_left = -0.00269775
anchor_top = 0.00269775
anchor_right = -0.00269775
anchor_bottom = 0.00269775
margin_left = -482.0
margin_top = 406.947
margin_right = -233.0
margin_bottom = 505.947
action_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click_button" parent="." instance=ExtResource( 13 )]
scale = Vector2( 0.28398, 0.28398 )

[node name="audio" type="Node2D" parent="."]
position = Vector2( 763.347, 296.825 )
rotation = -0.00773652
scale = Vector2( 0.306909, 0.311166 )

[node name="pop" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 21 )
volume_db = 10.0
bus = "sound_effects"

[node name="icon_settings" type="Node2D" parent="."]

[node name="fullscreen_icon" parent="icon_settings" instance=ExtResource( 23 )]

[node name="audio-icon" parent="icon_settings" instance=ExtResource( 22 )]
scale = Vector2( 1, 1.00358 )

[node name="dialog_icons" type="Node2D" parent="."]
[connection signal="button_down" from="scroll_faster" to="." method="text_clicked"]
[connection signal="button_down" from="skip_button/skip_dialog" to="." method="go_to_next_scene"]
[connection signal="button_down" from="back_button/back_dialog" to="." method="_on_back_button_down"]
